[package]
name = "yellowstone-grpc-proto"
version = "1.10.0+solana.1.17.1"
authors = ["Triton One"]
edition = "2021"
description = "Yellowstone gRPC Geyser Protobuf Definitions"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-grpc"
license = "Apache-2.0"
keywords = ["solana"]

[dependencies]
bincode = "1.3.3"
prost = "0.12.1"
solana-account-decoder = { git = "https://github.com/blockworks-foundation/solana.git", tag = "geyser_send_transaction_results_v1.16.21" }
solana-sdk = { git = "https://github.com/blockworks-foundation/solana.git", tag = "geyser_send_transaction_results_v1.16.21" }
solana-transaction-status = { git = "https://github.com/blockworks-foundation/solana.git", tag = "geyser_send_transaction_results_v1.16.21" }
tonic = "0.10.2"

[build-dependencies]
anyhow = "1.0.62"
protobuf-src = "1.1.0"
tonic-build = "0.10.2"
